// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.date $ariaDetails 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-date>
`;

exports[`control.date $ariaDetails 2`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-date>
`;

exports[`control.date $ariaSpeak 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="my-test-id txt2 my-test-id2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-date>
`;

exports[`control.date $ariaSpeak 2`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="my-test-id my-test-id2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-date>
`;

exports[`control.date $show/$hide error 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-date>
`;

exports[`control.date $show/$hide error 2`] = `
<wup-date
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date $show/$hide error 3`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-date>
`;

exports[`control.date common tests render + styles 1`] = `<wup-date />`;

exports[`control.date common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height:1px; width:1px;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}
  :root {
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: none;
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time) cubic-bezier(0, 0, 0.2, 1) 0ms;
          --icon-hover-r: 30px;
          --icon-hover: #0001;
        }
        [wupdark] {
          --base-btn-focus: #bdbdbd;
          --base-sep: #141414;
          --icon-hover: #fff3;
          --scroll: #fff2;
          --scroll-hover: #fff3;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--ctrl-focus);
        --ctrl-selected: var(--ctrl-focus);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl: inherit;
        --ctrl-bg: #fff;
        --ctrl-border: #e6e6e6;
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
        --wup-icon-back: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='m509.8 16.068-329.14 329.14c-21.449 21.449-21.449 56.174 0 77.567l329.14 329.14c21.449 21.449 56.174 21.449 77.567 0s21.449-56.174 0-77.567l-290.36-290.36 290.36-290.36c21.449-21.449 21.449-56.173 0-77.567-21.449-21.394-56.173-21.449-77.567 0z'/%3E%3C/svg%3E");
      }
      [wupdark] {
        --ctrl-bg: none;
        --ctrl-border: #104652;
        --ctrl-label: #919191;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-focus-label: #25a1b6;
        --ctrl-selected: #25a1b6;
        --ctrl-err: #ff6666;
        --ctrl-err-bg: #000;
        --ctrl-err-valid: #54d754;
      }
  :root {
      --ctrl-autofill: #00869e;
      --ctrl-clear: red;
      --ctrl-clear-hover: rgba(255,0,0,0.1);
      --ctrl-label-active-pos: translateY(calc(-100% - 0.2em)) scale(0.9);
     }
     [wupdark] {
        --ctrl-clear-hover: rgba(255,0,0,0.2);
        --ctrl-autofill: #89bc55;
        --ctrl-autofill-caret: #fff;
      }
  :root {
        --ctrl-date-icon-img: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M652.801 76.8c42.24 0 76.8 34.56 76.8 76.8v537.601c0 42.24-34.56 76.8-76.8 76.8H115.2c-42.624 0-76.8-34.56-76.8-76.8l.384-537.601c0-42.24 33.792-76.8 76.416-76.8h38.4V0h76.8v76.8h307.2V0h76.8v76.8h38.4zM192 345.6h76.8v76.8H192v-76.8zm230.4 0v76.8h-76.8v-76.8h76.8zm153.601 0h-76.8v76.8h76.8v-76.8zM115.2 691.2h537.601V268.8H115.2v422.4z'/%3E%3C/svg%3E");
      }
  
      WUP-DATE {
        --ctrl-focus-border: var(--ctrl-focus);
        contain: style;
        display: block;
        margin: 20px 0;
        box-shadow: 0 0 0 1px var(--ctrl-border);
        border-radius: var(--ctrl-border-radius);
        color: var(--ctrl);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-DATE strong,
      WUP-DATE legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-DATE[invalid],
      WUP-DATE[invalid] &gt; [menu] {
        --ctrl-focus-border: var( --ctrl-invalid-border);
        box-shadow: 0 0 3px 0 var(--ctrl-focus-border);
      }
      WUP-DATE:focus-within,
      WUP-DATE:focus-within &gt; [menu] {
        z-index: 90010;
        box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
      }
      WUP-DATE:focus-within strong,
      WUP-DATE:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-DATE,
      WUP-DATE[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-DATE &gt; label,
      WUP-DATE[disabled] &gt; label {
        pointer-events: none;
      }
      WUP-DATE label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-DATE input,
      WUP-DATE textarea {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-DATE [contenteditable=true] {
        margin: var(--ctrl-padding);
        margin-left: 0;
        margin-right: 0;
        cursor: inherit;
      }
      WUP-DATE strong {
        cursor: inherit;
      }
      WUP-DATE strong:empty {
        display: none;
      }
      WUP-DATE [aria-required="true"] + strong:after,
      WUP-DATE fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-DATE [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err);
        background: var(--ctrl-err-bg);
        overflow: auto;
        overflow: overlay;
        // text-shadow: 0 0 0 var(--ctrl-err);
      }
      WUP-DATE [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-DATE [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-DATE [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-DATE [error] li[valid] {
        color: var(--ctrl-err-valid);
      }
      WUP-DATE [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-valid);
      }
      WUP-DATE:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-DATE:hover strong,
        WUP-DATE[hovered] strong{
          color: var(--ctrl-focus-label);
        }
        WUP-DATE:hover,
        WUP-DATE:hover&gt;[menu],
        WUP-DATE[hovered],
        WUP-DATE[hovered]&gt;[menu] {
          box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
        }
      }
        WUP-DATE {
          contain: style;
          cursor: text;
          flex: 1;
        }
        WUP-DATE label &gt; span {
          width: 100%;
          position: relative;
          display: flex;
          flex-direction: row-reverse;
        }
        WUP-DATE input,
        WUP-DATE textarea,
        WUP-DATE [maskholder],
        WUP-DATE [prefix],
        WUP-DATE [postfix] {
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          font: inherit;
          color: inherit;
          margin: 0;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-DATE input,
        WUP-DATE textarea,
        WUP-DATE [contenteditable=true],
        WUP-DATE [maskholder],
        WUP-DATE [postfix] {
          width: 100%;
          box-sizing: border-box;
          border: none;
          background: none;
          outline: none;
        }
        WUP-DATE [prefix],
        WUP-DATE [postfix] {
          color: inherit;
          flex-shrink: 0;
        }
        WUP-DATE [maskholder],
        WUP-DATE [prefix],
        WUP-DATE [postfix] {
          display: none;
          pointer-events: none;
          text-overflow: initial;
          white-space: pre;
        }
        WUP-DATE [postfix] {
          position: absolute;
        }
        WUP-DATE [maskholder] {
          position: absolute;
          opacity: 0.65;
        }
        WUP-DATE [maskholder]&gt;i,
        WUP-DATE [postfix]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-DATE input:-webkit-autofill,
        WUP-DATE textarea:-webkit-autofill,
        WUP-DATE [contenteditable=true]:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
          -webkit-text-fill-color: var(--ctrl-autofill);
          caret-color: var(--ctrl-autofill-caret, auto);
        }
        WUP-DATE input:autofill,
        WUP-DATE textarea:autofill,
        WUP-DATE [contenteditable=true]:autofill {
          font: inherit;
          background-clip: text;
          text-fill-color: var(--ctrl-autofill);
          caret-color: var(--ctrl-autofill-caret, auto);
        }
        WUP-DATE strong {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
          -webkit-backface-visibility: hidden;
          backface-visibility: hidden; 
        }
        @media not all and (prefers-reduced-motion) {
          WUP-DATE strong {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-DATE input:not(:focus):placeholder,
        WUP-DATE textarea:not(:focus):placeholder {
          color: transparent;
        }
        WUP-DATE:focus-within strong,
        WUP-DATE input:not(:placeholder-shown) + strong,
        WUP-DATE textarea:not(:placeholder-shown) + strong,
        WUP-DATE [contenteditable=true]:not(:empty) + strong,
        WUP-DATE legend {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-DATE input:-webkit-autofill + strong
        WUP-DATE textarea:-webkit-autofill + strong
        WUP-DATE [contenteditable=true]:-webkit-autofill + strong {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-DATE input:autofill + strong,
        WUP-DATE textarea:autofill + strong,
        WUP-DATE [contenteditable=true]:autofill + strong {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-DATE:focus-within [maskholder],
        WUP-DATE:focus-within [prefix],
        WUP-DATE:focus-within [postfix],
        WUP-DATE input:not(:placeholder-shown) ~ [prefix],
        WUP-DATE input:not(:placeholder-shown) ~ [postfix],
        WUP-DATE textarea:not(:placeholder-shown) ~ [prefix],
        WUP-DATE textarea:not(:placeholder-shown) ~ [postfix] {
          display: inline-block;
        }
        /* style for icons */
        WUP-DATE label&gt;button,
        WUP-DATE label&gt;button:after,
        WUP-DATE label:after,
        WUP-DATE label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-DATE label:after {
          cursor: pointer;
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-DATE label:before {
          cursor: pointer;
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-DATE label&gt;button {
          contain: strict;
          z-index: 1;
          font-size: inherit;
        }
        WUP-DATE button[clear] {
          display: none;
          position: relative;
          margin-right: -0.5em;
          align-self: center;
          cursor: pointer;
          --ctrl-icon-img: var(--wup-icon-cross);
          background: none;
          -webkit-mask: none;
          mask: none;
        }
        WUP-DATE:focus-within button[clear] {
          display: inline-block;
          opacity: 1;
        }
        WUP-DATE button[clear=back] {
          --ctrl-icon-img: var(--wup-icon-back);
        }
        WUP-DATE button[clear]:after {
          content: "";
          padding: 0;
          -webkit-mask-image: var(--ctrl-icon-img);
          mask-image: var(--ctrl-icon-img);
        }
        WUP-DATE button[clear]:after,
        WUP-DATE button[clear]:before {
          position: absolute;
          top: 50%; left: 50%;
          transform: translate(-50%, -50%);
          width: 100%;
          height: 100%;
          border-radius: 50%;
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-DATE:hover button[clear] {
            display: inline-block;
            opacity: 1;
          }
          WUP-DATE button[clear]:hover:before {
            content: "";
            box-shadow: inset 0 0 0 99999px var(--ctrl-clear-hover);
          }
          WUP-DATE button[clear]:hover:after {
            background: var(--ctrl-clear);
          }
        }
        WUP-DATE[disabled] button[clear],
        WUP-DATE[readonly] button[clear] {
          display: none;
          pointer-events: none;
        }
      WUP-DATE {
        cursor: pointer;
      }
      WUP-DATE input {
        cursor: text;
      }
      WUP-DATE input:placeholder-shown,
      WUP-DATE input:read-only {
        cursor: pointer;
      }
      WUP-DATE label:after {
        content: "";
        -webkit-mask-image: var(--ctrl-icon-img);
        mask-image: var(--ctrl-icon-img);
      }
      @media not all and (prefers-reduced-motion) {
        WUP-DATE label:after {
          transition: transform var(--anim);
        }
      }
      WUP-DATE button[clear] {
        margin: 0;
      }
      WUP-DATE &gt; [menu] {
        padding: 0;
        max-height: 300px;
        z-index: 90010;
      }
      WUP-DATE {
        --ctrl-icon-img: var(--ctrl-date-icon-img);
      }
      WUP-DATE &gt; [menu] {
        overflow: hidden;
      }
      WUP-DATE &gt; [menu] &gt; wup-calendar {
        margin: 0;
      }
</style>
`;

exports[`control.date common tests snapshot of $defaults 1`] = `
{
  "autoComplete": null,
  "autoFocus": false,
  "clearActions": 2,
  "clearButton": true,
  "debounceMs": 0,
  "disabled": false,
  "exclude": null,
  "firstWeekDay": 1,
  "focusDebounceMs": 100,
  "format": "yyyy-mm-dd",
  "label": null,
  "mask": "",
  "maskholder": "",
  "max": null,
  "min": null,
  "name": null,
  "postfix": "",
  "prefix": "",
  "readOnly": false,
  "readOnlyInput": false,
  "selectOnFocus": false,
  "showCase": 74,
  "startWith": null,
  "storage": "local",
  "storageKey": "",
  "utc": true,
  "validateDebounceMs": 500,
  "validationCase": 13,
  "validationRules": {
    "$alwaysInvalid": [Function],
    "$alwaysValid": [Function],
    "exclude": [Function],
    "max": [Function],
    "min": [Function],
    "required": [Function],
  },
  "validationShowAll": false,
  "validations": null,
}
`;

exports[`control.date common tests snapshot of $defaults 2`] = `undefined`;

exports[`control.date common tests snapshot of $defaults 3`] = `
[
  "disabled",
  "readonly",
  "w-autocomplete",
  "w-autofocus",
  "w-clearactions",
  "w-clearbutton",
  "w-debouncems",
  "w-disabled",
  "w-exclude",
  "w-firstweekday",
  "w-focusdebouncems",
  "w-format",
  "w-initvalue",
  "w-label",
  "w-mask",
  "w-maskholder",
  "w-max",
  "w-min",
  "w-name",
  "w-postfix",
  "w-prefix",
  "w-readonly",
  "w-readonlyinput",
  "w-selectonfocus",
  "w-showcase",
  "w-startwith",
  "w-storage",
  "w-storagekey",
  "w-utc",
  "w-validatedebouncems",
  "w-validationcase",
  "w-validationrules",
  "w-validations",
  "w-validationshowall",
]
`;

exports[`control.date validations $options.validationShowAll 1`] = `
<wup-date
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min value is 2022-05-20
      </li>
      <li>
        Max value is 2022-10-28
      </li>
      <li>
        This value is disabled
      </li>
    </ul>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations $options.validationShowAll 2`] = `
<wup-date
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt2"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    />
    <span
      class="wup-hidden"
    >
      Min value is 2022-05-20
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min value is 2022-05-20
      </li>
      <li
        valid=""
      >
        Max value is 2022-10-28
      </li>
      <li
        valid=""
      >
        This value is disabled
      </li>
    </ul>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations $options.validationShowAll 3`] = `
<wup-date
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-describedby="txt5"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Name
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations options.validationCase 1`] = `
<wup-date>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-date>
`;

exports[`control.date validations options.validationCase 2`] = `
<wup-date
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i />
        yyyy-mm-dd
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt2"
        aria-describedby="txt4"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="txt2"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear="back"
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    menu=""
    style="opacity: 0;"
  >
    <wup-calendar
      required=""
    >
      <div
        calendar="year"
        id="txt2"
      >
        <header>
          <button
            aria-hidden="true"
            disabled=""
            tabindex="-1"
            type="button"
          >
            2018 ... 2033
          </button>
        </header>
        <div>
          <div>
            <ol
              role="grid"
              style="overflow: hidden;"
            >
              <li
                role="gridcell"
              >
                2018
              </li>
              <li
                role="gridcell"
              >
                2019
              </li>
              <li
                role="gridcell"
              >
                2020
              </li>
              <li
                role="gridcell"
              >
                2021
              </li>
              <li
                aria-current="date"
                role="gridcell"
              >
                2022
              </li>
              <li
                role="gridcell"
              >
                2023
              </li>
              <li
                role="gridcell"
              >
                2024
              </li>
              <li
                role="gridcell"
              >
                2025
              </li>
              <li
                role="gridcell"
              >
                2026
              </li>
              <li
                role="gridcell"
              >
                2027
              </li>
              <li
                role="gridcell"
              >
                2028
              </li>
              <li
                role="gridcell"
              >
                2029
              </li>
              <li
                role="gridcell"
              >
                2030
              </li>
              <li
                role="gridcell"
              >
                2031
              </li>
              <li
                role="gridcell"
              >
                2032
              </li>
              <li
                role="gridcell"
              >
                2033
              </li>
            </ol>
          </div>
        </div>
      </div>
    </wup-calendar>
  </wup-popup>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations options.validationCase 3`] = `
<wup-date
  invalid=""
  opened=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i>
          2022-02-28
        </i>
        
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt2"
        aria-describedby="txt5"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="txt2"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    menu=""
    style=""
  >
    <wup-calendar
      required=""
    >
      <div
        calendar="year"
        id="txt2"
      >
        <header>
          <button
            aria-hidden="true"
            disabled=""
            tabindex="-1"
            type="button"
          >
            2018 ... 2033
          </button>
        </header>
        <div>
          <div>
            <ol
              role="grid"
              style="overflow: hidden;"
            >
              <li
                role="gridcell"
              >
                2018
              </li>
              <li
                role="gridcell"
              >
                2019
              </li>
              <li
                role="gridcell"
              >
                2020
              </li>
              <li
                role="gridcell"
              >
                2021
              </li>
              <li
                aria-current="date"
                aria-selected="true"
                role="gridcell"
              >
                2022
              </li>
              <li
                role="gridcell"
              >
                2023
              </li>
              <li
                role="gridcell"
              >
                2024
              </li>
              <li
                role="gridcell"
              >
                2025
              </li>
              <li
                role="gridcell"
              >
                2026
              </li>
              <li
                role="gridcell"
              >
                2027
              </li>
              <li
                role="gridcell"
              >
                2028
              </li>
              <li
                role="gridcell"
              >
                2029
              </li>
              <li
                role="gridcell"
              >
                2030
              </li>
              <li
                role="gridcell"
              >
                2031
              </li>
              <li
                role="gridcell"
              >
                2032
              </li>
              <li
                role="gridcell"
              >
                2033
              </li>
            </ol>
          </div>
        </div>
      </div>
    </wup-calendar>
  </wup-popup>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date validations options.validationCase 4`] = `
<wup-date
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <span
        aria-hidden="true"
        maskholder=""
      >
        <i />
        yyyy-mm-dd
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="txt6"
        aria-describedby="txt7"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="txt6"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="combobox"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt7"
    role="alert"
    style=""
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-date>
`;

exports[`control.date with form 1`] = `
<wup-form
  role="form"
>
  <wup-date>
    <label
      for="txt1"
    >
      <span>
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          id="txt1"
          placeholder=" "
          role="combobox"
          type="text"
        />
        <strong>
          First Input
        </strong>
      </span>
      <button
        aria-hidden="true"
        clear=""
        tabindex="-1"
        type="button"
      />
    </label>
  </wup-date>
</wup-form>
`;
